--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
       margin: 0;
       padding: 0;
     }
+
+    .link {
+      text-decoration: none;
+      color: inherit;
+    }
   </style>
   <title>Blog App</title>
 </head>
